--- a/.github/workflows/script2019.yml
+++ b/.github/workflows/script2019.yml
@@ -25,7 +25,7 @@ jobs:
            Write-Host "Installing VSIX..."
            . "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\VSIXInstaller.exe" /q /a /logFile:vsixinst.log InstallResources\SHFBVisualStudioPackage_VS2017AndLater.vsix
            Write-Host "Sandcastle installed" -ForegroundColor Green
-           type %TEMP%\vsixinst.log
+           type C:\Users\RUNNER~1\AppData\Local\Temp\vsixinst.log
       shell: pwsh
         
     - name: Test
