--- a/.github/workflows/test2022.yml
+++ b/.github/workflows/test2022.yml
@@ -20,5 +20,5 @@ jobs:
       run: |
            echo SHFBROOT: %SHFBROOT% 
            echo TEMP: %TEMP%
-           type %TEMP%\vsixinst.log
+           type %TEMP%\*_VSIXInstaller_*.log
       shell: cmd
