--- a/action.yml
+++ b/action.yml
@@ -7,11 +7,12 @@ inputs:
     description:  'version of SHFB to install'
     required: true
     default: '2022.12.30.0'
-  
     
 runs:
   using: "composite"
   steps:
-    - run: ${{ github.action_path }}/setup.ps1 -version ${{ inputs.version }} 
+    - run: |
+           ${{ github.action_path }}/setup.ps1 -version ${{ inputs.version }}
+           echo "SHFBROOT=C:\Program Files (x86)\EWSoftware\Sandcastle Help File Builder\" >> $GITHUB_ENV
       shell: pwsh
   
