--- a/action.yml
+++ b/action.yml
@@ -11,9 +11,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: |
-           ${{ github.action_path }}/setup.ps1 -version ${{ inputs.version }}
-           echo "SHFBROOT=C:\Program Files (x86)\EWSoftware\Sandcastle Help File Builder\" >> $GITHUB_ENV
-           echo "Ready ..."
+    - run: ${{ github.action_path }}/setup.ps1 -version ${{ inputs.version }}
       shell: pwsh
-  
+      
+    - run: echo "SHFBROOT=C:\Program Files (x86)\EWSoftware\Sandcastle Help File Builder\" >> $GITHUB_ENV
+      shell: pwsh
